5.2.0 -> 5.2.1:
    - permit RPMTAG_FILECONTEXTS addition to be disabled.
    - rpm.org: Avoid adding Lua sources/patches twice when recursing.
    - proyvind: make sure to expand %buildroot from main package.
    - proyvind: rpmevr: make rpmEVRparse() work with missing values.
    - proyvind: rpm46compat: Implement RPM 4.6 API wrapper providing ~seamless
	API compatibility for the function wrappers provided. :)
    - proyvind: python: start on implementing proper regression tests.
    - proyvind: js: fix internal build on Linux.
    - proyvind: filetriggers: fix missing file suffix for scripts. (from unity linux).
    - proyvind: rpm4compat: add wrappers for renamed rpmdb*->rpmmi* functions.
    - proyvind: python: add te.D() to return element distepoch.
    - proyvind: python: handle None values in labelCompare() again.
    - proyvind: python: handle DISTEPOCH in labelCompare().
    - jbj: python: fix: missing changelog in repo-md can segfault (David Smid).

5.2b1 -> 5.2.0:
    - rse: fix building under RPM_VENDOR_OPENPKG/switch-from-susr-to-musr-on-srpm-install

5.2a4 -> 5.2b1:
    - jbj: revert checkfiles behavior to last known good (rpm-5.1.9).
    - jbj: rpmfc: reduce the amount of debugging noise with lots of files.
    - jbj: selinux: fix: disabler bit toggle sense was inverted.
    - jbj: add the Fedorable tag(s) for file digests.
    - jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
    - jbj: add RPMSIGTAG_PADDING to force metadata header alignment in file.
    - jbj: header: fix: re-initialize headers from pool more carefully.
    - jbj: fix: remove duplicated Provides: from pubkey headers.
    - jbj: eliminate (unused) DB_DBT_MALLOC flag while loading rpmdb headers.
    - jbj: remove (unused) --hdrfastdatalength and --hdrlazytagswab.
    - jbj: use PROT_READ for header blob's.
    - jbj: add --rpmmidebug.
    - jbj: bump sonames to libfoo-5.2.
    - jbj: rpmmi: rename the other methods for the match iterator object.